<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuel Account</string>
    <string name="edit_message">Test Message.</string>
    <string name="button_save">Save</string>
    <!-- Main Menu -->
    <string name="menu_main_vehicles">Vehicles</string>
    <string name="menu_main_stations">Stations</string>
    <string name="menu_main_purchases">Purchases</string>
    <!-- Vehicles -->
    <string name="vehicle_manufacturer">Manufacturer</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_registration">Registration</string>
    <string name="button_add_vehicle">Add</string>
    <string name="button_done_vehicle">Done</string>
    <!-- Stations -->
    <string name="station_name">Station Name</string>
    <string name="station_petrol_company">Petrol Company</string>
    <string name="station_post_code">Post Code</string>
    <string name="button_add_station">Add</string>
    <!-- Purchases -->
    <string name="purchase_volume_litre">ltrs</string>
    <string name="purchase_price_by_volume_pence">pence/ltr</string>
    <string name="purchase_price_total">total cost</string>
    <string name="button_add_purchase">Add</string>

</resources>