<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/station_name" />

    <EditText
        android:id="@+id/station_petrol_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/station_petrol_company" />

    <EditText
        android:id="@+id/station_post_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/station_post_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addStation"
            android:text="@string/button_add_station" >
        </Button>

        <Button
            android:id="@+id/button_done_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="doneStation"
            android:text="@string/button_done_station" >
        </Button>
    </LinearLayout>

</LinearLayout>